# book-reco

./: LICENSE  app.py  hello.py  pyproject.toml
data/clean/: df_books_clean.csv  df_books_cluster.csv
data/raw/: goodreads_best_books_ever.csv  gutenberg_browsing:_fiction_500_books.csv  nytimes_fiction_2015_2025.csv
notebooks/: api_books_nytimes.ipynb  api_books_openlibrary.ipynb  clean_books.ipynb  clustering_recommendation.ipynb  scrape_books_gutenberg.ipynb  scrape_goodreads.ipynb
