[project]
name = "book-reco"
version = "0.1.0"
description = "Book Recommendation App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "statsmodels>=0.14.4",
    "dotenv>=0.9.9",
    "scikit-learn>=1.6",
    "plotly>=6.0.1",
    "kneed>=0.8.5",
    "streamlit>=1.43.0"
]
